<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_recent">Recent</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_share">Share</string>
    <string name="title_dialer">Dialer</string>
    <string name="title_contact_details">Contact Details</string>
    <string name="room_message_placeholder_not_encrypted">Send a message</string>
    <string name="room_message_placeholder_reply_to_not_encrypted">Send a reply</string>
    <string name="room_participants_online">Online</string>
    <string name="room_participants_offline">Last seen</string>
    <string name="room_participants_idle">Idle</string>
    <string name="menu_profile">My Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="privacy_text_for_dialog">
        Wills Smart Voip needs access to your contacts so that you can connect with your friends across all your devices. Your contacts will be continuously synced with Wills Smart Voip\'s heavily encrypted cloud servers.</string>
</resources>