<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_dialer"
        android:icon="@drawable/numpad_btn"
        android:title="@string/title_dialer" />
    <item
        android:id="@+id/navigation_recent"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_recent" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/title_contacts" />

</menu>
