<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chatapp.fragments.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_recent"
        android:name="com.chatapp.fragments.RecentFragment"
        android:label="@string/title_recent"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.chatapp.fragments.ContactsListFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_notifications" />
</navigation>
