<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


        <im.vector.view.VectorCircularImageView
            android:id="@+id/imgProfile"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/Vector.Toolbar.Title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProfile"
            app:layout_constraintTop_toTopOf="@+id/imgProfile" />

        <TextView
            android:id="@+id/txtPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/nav_header_subtitle"
            android:textAppearance="@style/Vector.Toolbar.SubTitle"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
            app:layout_constraintEnd_toStartOf="@+id/txtBalance"
            app:layout_constraintStart_toEndOf="@+id/imgProfile" />

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="Balance: 0"
            android:textAppearance="@style/Vector.Toolbar.Title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPhoneNo" />

</androidx.constraintlayout.widget.ConstraintLayout>
